@@ -38,7 +38,6 @@ function save_options() {
 	
 	hide_owned = $("#hide_owned").prop('checked');
 	hide_owned_homepage = $("#hide_owned_homepage").prop('checked');
-	hide_dlcunownedgames = $("#hide_dlcunownedgames").prop('checked');
 	hidetmsymbols = $("#hidetmsymbols").prop('checked');
 	hide_early_access = $("#hide_early_access").prop('checked');
 
@@ -187,7 +186,6 @@ function save_options() {
 		
 		'hide_owned': hide_owned,
 		'hide_owned_homepage': hide_owned_homepage,
-		'hide_dlcunownedgames': hide_dlcunownedgames,
 		'hidetmsymbols': hidetmsymbols,
 		'hide_early_access': hide_early_access,
 
@@ -422,7 +420,6 @@ function load_options() {
 		
 		if (settings.hide_owned === undefined) { settings.hide_owned = false; chrome.storage.sync.set({'hide_owned': settings.hide_owned}); }
 		if (settings.hide_owned_homepage === undefined) { settings.hide_owned_homepage = false; chrome.storage.sync.set({'hide_owned_homepage': settings.hide_owned_homepage}); }
-		if (settings.hide_dlcunownedgames === undefined) { settings.hide_dlcunownedgames = false; chrome.storage.sync.set({'hide_dlcunownedgames': settings.hide_dlcunownedgames}); }
 		if (settings.hidetmsymbols === undefined) { settings.hidetmsymbols = false; chrome.storage.sync.set({'hidetmsymbols': settings.hidetmsymbols}); }
 		if (settings.hide_early_access === undefined) { settings.hide_early_access = false; chrome.storage.sync.set({'hide_early_access': settings.hide_early_access}); }
 
@@ -523,7 +520,6 @@ function load_options() {
 		
 		$("#hide_owned").prop('checked', settings.hide_owned);
 		$("#hide_owned_homepage").prop('checked', settings.hide_owned_homepage);
-		$("#hide_dlcunownedgames").prop('checked', settings.hide_dlcunownedgames);
 		$("#hidetmsymbols").prop('checked', settings.hidetmsymbols);
 		$("#hide_early_access").prop('checked', settings.hide_early_access);
 
@@ -647,7 +643,6 @@ function load_translation() {
 			$("#hide_text").text(localized_strings[settings.language].hide);
 			$("#hide_owned_text").text(localized_strings[settings.language].options.hide_owned);
 			$("#hide_owned_homepage_text").text(localized_strings[settings.language].options.hide_owned_homepage);
-			$("#hide_dlcunownedgames_text").text(localized_strings[settings.language].options.hidedlcunownedgames);
 			$("#hidetmsymbols_text").text(localized_strings[settings.language].options.hidetmsymbols);
 			$("#hide_early_access_text").text(localized_strings[settings.language].options.hide_early_access);
 			
