@@ -168,7 +168,6 @@
 				<li class="header" id="hide_text">Hide</li>
 				<li><input type="checkbox" id="hide_owned"><label for="hide_owned" id="hide_owned_text">Items you own in search results and tag pages</label></li>
 				<li><input type="checkbox" id="hide_owned_homepage"><label for="hide_owned_homepage" id="hide_owned_homepage_text">Items you own on the homepage</label></li>
-				<li><input type="checkbox" id="hide_dlcunownedgames"><label for="hide_dlcunownedgames" id="hide_dlcunownedgames_text">DLC for games you do not own</label></li>
 				<li><input type="checkbox" id="hidetmsymbols"><label for="hidetmsymbols" id="hidetmsymbols_text">Trademark and Copyright symbols in game titles</label></li>
 				<li><input type="checkbox" id="hide_early_access"><label for="hide_early_access" id="hide_early_access_text">Hide Early Access games on homepage, browse, and search pages</label></li>
 				<li class="header" id="language_text">Language</li>				
